syntax = "proto3";

package com.sushkevych.securitydevices.request.device.get_all_stream.proto;

option java_multiple_files = true;

import "com/sushkevych/securitydevices/commonmodels/device/device.proto";

message GetAllDeviceStreamRequest {

}

message GetAllDeviceStreamResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.device.Device device = 1;
  }

  message Failure {
    string message = 100;
  }
}
